--- a/style.scss
+++ b/style.scss
@@ -23,13 +23,65 @@ body {
 
 .id {
   display: flex;
-  flex-wrap: wrap;
-  @include regularPadding(22px);
+  flex-wrap: nowrap;
   background: white;
+  width: responsiveSize(413, 1046);
+  align-items: center;
 
   &__photo {
     width: 311px;
+    @include regularPadding(22px);
     height: 311px;
-    border-radius: 12px;
+    border-radius: 30px;
+  }
+
+  &__gpeTexte {
+    @include regularPadding(22px);
+    color: #828282;
+    width: 70%;
+  }
+
+  &__gpeContact {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-bottom: 40px;
+  }
+  &__gpeContact__gpeName {
+    min-width: 50%;
+  }
+  &__name {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    color: #4f4f4f;
+  }
+
+  p {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    padding-bottom: 20px;
+
+    /* Gray 3 */
+
+    color: inherit;
+  }
+
+  &__gpeContact__infos {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    /* identical to box height */
+
+    /* Gray 2 */
+
+    color: #4f4f4f;
   }
 }
