--- a/style.css
+++ b/style.css
@@ -7,14 +7,28 @@
 body {
   padding-left: calc( 10px + 187 * ((100vw - 375px) / 1065) );
   padding-right: calc( 10px + 187 * ((100vw - 375px) / 1065) );
-  padding-top: 70px;
+  padding-top: 20px;
   background: #333333;
+}
+
+h3 {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  color: #4f4f4f;
+}
+
+.group {
+  margin-top: 50px;
+  background: white;
+  border-radius: 12px;
 }
 
 .id {
   display: flex;
   flex-wrap: nowrap;
-  background: white;
   width: calc( 413px + 633 * ((100vw - 375px) / 1065) );
   align-items: center;
 }
@@ -65,6 +79,123 @@ body {
   /* identical to box height */
   /* Gray 2 */
   color: #4f4f4f;
+}
+
+/*COMPETENCES*/
+h2 {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  text-transform: uppercase;
+  /* Gray 2 */
+  color: #4f4f4f;
+}
+
+.skills {
+  width: 415.02px;
+  height: 303px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 24px 24px 24px 24px;
+}
+.skills__list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 80%;
+}
+.skills__item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.skills__name {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #4f4f4f;
+}
+.skills__total {
+  width: 70%;
+  height: 9.6px;
+  background: #c4c4c4;
+  border-radius: 12px;
+}
+.skills__current {
+  height: 100%;
+  background: #2f80ed;
+  border-radius: 12px;
+}
+.skills__current__html {
+  width: 80%;
+}
+.skills__current__css {
+  width: 70%;
+}
+.skills__current__js {
+  width: 50%;
+}
+.skills__current__vue {
+  width: 60%;
+}
+.skills__current__figma {
+  width: 80%;
+}
+.skills__current__bs {
+  width: 40%;
+}
+
+/* HOBBIES*/
+.hobbies {
+  width: 415px;
+  height: 836px;
+  padding: 22px 22px 22px 22px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.hobbies__gpe {
+  height: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.hobbies__imgContainer {
+  border-radius: 12px;
+  width: 379.66px;
+  height: 139px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hobbies__img {
+  height: auto;
+  width: 100%;
+}
+.hobbies__text {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  /* identical to box height */
+  color: #333333;
+}
+.hobbies__description {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  /* identical to box height */
+  color: #828282;
 }
 
 /*# sourceMappingURL=style.css.map */
