--- a/style.scss
+++ b/style.scss
@@ -4,8 +4,8 @@
   );
 }
 
-@mixin regularPadding($padding) {
-  padding: $padding $padding $padding $padding;
+@mixin regularPadding($paddingOrMargin, $value) {
+  #{$paddingOrMargin}: $value $value $value $value;
 }
 
 * {
@@ -17,26 +17,39 @@
 body {
   padding-left: responsiveSize(10, 197);
   padding-right: responsiveSize(10, 197);
-  padding-top: 70px;
+  padding-top: 20px;
   background: #333333;
 }
 
+h3 {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+
+  color: #4f4f4f;
+}
+.group {
+  margin-top: 50px;
+  background: white;
+  border-radius: 12px;
+}
 .id {
   display: flex;
   flex-wrap: nowrap;
-  background: white;
   width: responsiveSize(413, 1046);
   align-items: center;
 
   &__photo {
     width: 311px;
-    @include regularPadding(22px);
+    @include regularPadding(padding, 22px);
     height: 311px;
     border-radius: 30px;
   }
 
   &__gpeTexte {
-    @include regularPadding(22px);
+    @include regularPadding(padding, 22px);
     color: #828282;
     width: 70%;
   }
@@ -83,5 +96,139 @@ body {
     /* Gray 2 */
 
     color: #4f4f4f;
+  }
+}
+
+/*COMPETENCES*/
+h2 {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  text-transform: uppercase;
+
+  /* Gray 2 */
+
+  color: #4f4f4f;
+}
+.skills {
+  width: 415.02px;
+  height: 303px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  @include regularPadding(padding, 24px);
+
+  &__list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 80%;
+  }
+
+  &__item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__name {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+
+    color: #4f4f4f;
+  }
+
+  &__total {
+    width: 70%;
+    height: 9.6px;
+    background: #c4c4c4;
+    border-radius: 12px;
+  }
+
+  &__current {
+    height: 100%;
+    background: #2f80ed;
+    border-radius: 12px;
+
+    &__html {
+      width: 80%;
+    }
+    &__css {
+      width: 70%;
+    }
+    &__js {
+      width: 50%;
+    }
+    &__vue {
+      width: 60%;
+    }
+    &__figma {
+      width: 80%;
+    }
+    &__bs {
+      width: 40%;
+    }
+  }
+}
+
+/* HOBBIES*/
+
+.hobbies {
+  width: 415px;
+  height: 836px;
+  @include regularPadding(padding, 22px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  &__gpe {
+    height: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  &__imgContainer {
+    border-radius: 12px;
+    width: 379.66px;
+    height: 139px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__img {
+    height: auto;
+    width: 100%;
+  }
+
+  &__text {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    /* identical to box height */
+
+    color: #333333;
+  }
+
+  &__description {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    /* identical to box height */
+
+    color: #828282;
   }
 }
