--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
+.brokenDisplay, .id {
+  width: calc(100% - 20px);
+}
+@media (min-width: 500px) {
+  .brokenDisplay, .id {
+    width: 460px;
+  }
+}
+@media (min-width: 768px) {
+  .brokenDisplay, .id {
+    width: 698px;
+  }
+}
+@media (min-width: 900px) {
+  .brokenDisplay, .id {
+    width: 816px;
+  }
+}
+@media (min-width: 1024px) {
+  .brokenDisplay, .id {
+    width: 738px;
+  }
+}
+@media (min-width: 1280px) {
+  .brokenDisplay, .id {
+    width: 920px;
+  }
+}
+@media (min-width: 1440px) {
+  .brokenDisplay, .id {
+    width: 1048px;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -5,10 +39,18 @@
 }
 
 body {
-  padding-left: calc( 10px + 187 * ((100vw - 375px) / 1065) );
-  padding-right: calc( 10px + 187 * ((100vw - 375px) / 1065) );
-  padding-top: 20px;
+  /*
+    padding-left: changingSize(10, 197);
+    padding-right: changingSize(10, 197);
+    padding-top: 20px;
+  */
+}
+
+main {
   background: #333333;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 h3 {
@@ -29,7 +71,7 @@ h3 {
 .id {
   display: flex;
   flex-wrap: nowrap;
-  width: calc( 413px + 633 * ((100vw - 375px) / 1065) );
+  /*width: changingSize(355, 1046);*/
   align-items: center;
 }
 .id__photo {
@@ -94,7 +136,6 @@ h2 {
 }
 
 .skills {
-  width: 415.02px;
   height: 303px;
   display: flex;
   flex-direction: column;
@@ -153,7 +194,6 @@ h2 {
 
 /* HOBBIES*/
 .hobbies {
-  width: 415px;
   height: 836px;
   padding: 22px 22px 22px 22px;
   display: flex;
@@ -168,7 +208,7 @@ h2 {
 }
 .hobbies__imgContainer {
   border-radius: 12px;
-  width: 379.66px;
+  width: 100%;
   height: 139px;
   overflow: hidden;
   display: flex;
@@ -196,6 +236,74 @@ h2 {
   line-height: 20px;
   /* identical to box height */
   color: #828282;
+}
+
+/* Blog*/
+.blog {
+  padding-left: 20px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  height: 656px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.blog__title {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  /* identical to box height */
+  color: #e0e0e0;
+}
+.blog__gpeTitre {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: start;
+  justify-content: space-between;
+}
+.blog__gpeTitre__titre {
+  width: 30%;
+}
+.blog__gpeTitre__containerImg {
+  width: 60%;
+  height: 321px;
+  overflow: hidden;
+}
+.blog__gpeTitre__img {
+  object-fit: cover;
+}
+.blog__text {
+  width: 83%;
+}
+
+.brokenDisplay {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.leftDisplay {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .leftDisplay {
+    width: 39%;
+  }
+}
+
+.rightDisplay {
+  width: 100%;
+  flex-direction: column;
+  display: flex;
+}
+@media (min-width: 768px) {
+  .rightDisplay {
+    width: 57%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
